<resources>
    <string name="app_name">Timetable</string>
    <string name="internet_data">Internet data</string>
    <string name="add_lesson">Add lesson</string>
    <string name="clear_lessons">Clear lessons</string>

    <string name="view_lessons">View lessons</string>
    <string name="lesson_name">Lesson</string>
    <string name="lesson_position">Lesson position</string>
    <string name="create_lesson">Create Lesson</string>

    <string name="cleared_message">All data is cleared</string>

    <string name="math">Math</string>
    <string name="history">History</string>
    <string name="literature">Literature</string>
    <string name="informatics">Informatics</string>
    <string name="physics">Physics</string>
    <string name="chemistry">Chemistry</string>

    <string-array name="days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="day">Day</string>
    <string name="close">Close</string>
    <string name="header_text">The lessons</string>
    <string name="show_all">Show all</string>
    <string name="show_rent">Rent</string>
    <string name="show_buy">Buy</string>
    <string name="title">Title</string>
    <string name="id">ID</string>
    <string name="album_id">Album ID</string>
</resources>
