<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="lessonViewModel"
            type="com.example.timetable.lesson.LessonViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".lesson.LessonViewModel">

        <TextView
            android:id="@+id/lesson_name_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lesson_name"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/CreateLessonTextView"/>

        <TextView
            android:id="@+id/chosen_lesson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:text="@{lessonViewModel.lessonName}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/lesson_name_view"
            app:layout_constraintBottom_toBottomOf="@+id/lesson_name_view"
            style="@style/CreateLessonTextView"/>

        <Button
            android:id="@+id/history"
            style="@style/LessonButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:onClick="@{() -> lessonViewModel.setLessonsName(0)}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/informatics"
            app:layout_constraintTop_toBottomOf="@id/chosen_lesson"/>

        <Button
            android:id="@+id/informatics"
            style="@style/LessonButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/informatics"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:onClick="@{() -> lessonViewModel.setLessonsName(1)}"
            app:layout_constraintBottom_toBottomOf="@id/history"
            app:layout_constraintStart_toEndOf="@id/history"
            app:layout_constraintEnd_toEndOf="@id/physics"/>

        <Button
            android:id="@+id/physics"
            style="@style/LessonButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/physics"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:onClick="@{() -> lessonViewModel.setLessonsName(2)}"
            app:layout_constraintBottom_toBottomOf="@id/history"
            app:layout_constraintStart_toEndOf="@id/informatics"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/chemistry"
            style="@style/LessonButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:text="@string/chemistry"
            android:onClick="@{() -> lessonViewModel.setLessonsName(3)}"
            app:layout_constraintEnd_toStartOf="@id/literature"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/history" />

        <Button
            android:id="@+id/literature"
            style="@style/LessonButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/literature"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:onClick="@{() -> lessonViewModel.setLessonsName(4)}"
            app:layout_constraintBottom_toBottomOf="@id/chemistry"
            app:layout_constraintStart_toEndOf="@id/chemistry"
            app:layout_constraintEnd_toStartOf="@id/math"/>

        <Button
            android:id="@+id/math"
            style="@style/LessonButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/math"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:onClick="@{() -> lessonViewModel.setLessonsName(5)}"
            app:layout_constraintBottom_toBottomOf="@id/chemistry"
            app:layout_constraintStart_toEndOf="@id/literature"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/day_view"
            style="@style/CreateLessonTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/triple_margin"
            android:layout_marginEnd="@dimen/margin"
            android:text="@string/day"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chemistry" />

        <TextView
            android:id="@+id/chosen_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:text="@{String.valueOf(lessonViewModel.lessonDay)}"
            app:layout_constraintBottom_toBottomOf="@id/day_view"
            app:layout_constraintStart_toEndOf="@id/day_view"
            style="@style/CreateLessonTextView"/>

        <Button
            android:id="@+id/monday"
            style="@style/LessonButtons"
            android:text="@string/monday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:onClick="@{() -> lessonViewModel.setLessonsDay(0)}"
            app:layout_constraintTop_toBottomOf="@+id/chosen_day"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tuesday"/>

        <Button
            android:id="@+id/tuesday"
            style="@style/LessonButtons"
            android:text="@string/tuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:onClick="@{() -> lessonViewModel.setLessonsDay(1)}"
            app:layout_constraintBottom_toBottomOf="@+id/monday"
            app:layout_constraintStart_toEndOf="@id/monday"
            app:layout_constraintEnd_toStartOf="@id/wednesday"/>

        <Button
            android:id="@+id/wednesday"
            style="@style/LessonButtons"
            android:text="@string/wednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:onClick="@{() -> lessonViewModel.setLessonsDay(2)}"
            app:layout_constraintBottom_toBottomOf="@+id/monday"
            app:layout_constraintStart_toEndOf="@id/tuesday"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/thursday"
            style="@style/LessonButtons"
            android:text="@string/thursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:onClick="@{() -> lessonViewModel.setLessonsDay(3)}"
            app:layout_constraintTop_toBottomOf="@id/monday"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/friday"/>

        <Button
            android:id="@+id/friday"
            style="@style/LessonButtons"
            android:text="@string/friday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:onClick="@{() -> lessonViewModel.setLessonsDay(4)}"
            app:layout_constraintBottom_toBottomOf="@id/thursday"
            app:layout_constraintStart_toEndOf="@id/thursday"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/ok"
            style="@style/LessonButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginBottom="@dimen/triple_margin"
            android:text="@string/add_lesson"
            android:onClick="@{() -> lessonViewModel.onUpdateLesson()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>