<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <!-- Data to make available to the XML via data binding. In this case,
 the whole ViewModel, so that we can access the LiveData,
 click handlers, and state variables. -->
    <data>
        <variable
            name="detailViewModel"
            type="com.example.timetable.detail.DetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".detail.DetailViewModel">

        <TextView
            android:id="@+id/detail_lesson_day_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/triple_margin"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:text="@string/day"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/CreateLessonTextViewTitle"/>

        <TextView
            android:id="@+id/detail_lesson_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            app:lessonDay="@{detailViewModel.timetable}"
            app:layout_constraintTop_toBottomOf="@+id/detail_lesson_day_title"
            style="@style/CreateLessonTextView"/>

        <TextView
            android:id="@+id/detail_lesson_name_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/triple_margin"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:text="@string/lesson_name"
            app:layout_constraintTop_toBottomOf="@+id/detail_lesson_day"
            style="@style/CreateLessonTextViewTitle"/>

        <TextView
            android:id="@+id/detail_lesson_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            app:lessonName="@{detailViewModel.timetable}"
            app:layout_constraintTop_toBottomOf="@+id/detail_lesson_name_title"
            style="@style/CreateLessonTextView"/>

        <Button
            android:id="@+id/detail_close"
            style="@style/LessonButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/triple_margin"
            android:text="@string/close"
            android:onClick="@{() -> detailViewModel.onClose()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>